# face_based-open-lib

./: CMakeLists.txt  FaceFeat.cpp  FaceFeat.h  HandleJson.cpp  HandleJson.h  QueueInfo.cpp  QueueInfo.h  README.md  Singleton.h  ai_pybind11.cpp  api_python.cpp  api_python.h  common.h  faceItem.cpp  faceItem.h  faceResult.cpp  faceResult.h  face_api.txt  face_error.h  full.sh  makefile  mat_warper.cpp  mat_warper.h  mngSdk.cpp  mngSdk.h  run.sh  setup.py  so_run.sh  test.py
